--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ section:nth-child(2n + 1) {
     width: 40%;
     left: 5%;
     min-height: 150px;
-    border: 2px solid black;
+    border: 2px transparent black;
     overflow-wrap: break-word;
     font-size: small;
 }
@@ -259,7 +259,7 @@ li{
 
 .portfolio-image-container {
     max-width: 300px;
-    overflow: hidden;
+    overflow:scroll;
     margin: 10px;
     background-size: cover;
     background-repeat: no-repeat;
@@ -279,8 +279,10 @@ li{
     height: 100%;
     color: transparent;
     text-align: center;
-    padding: 10px;
+    /* padding: 10px; */
+    font-size: smaller;
 }
+
 
 .portfolio-image-container:hover {
     box-shadow: 0 0 20px #74ADC8;
@@ -288,8 +290,9 @@ li{
 
 .portfolio-image-container:hover .portfolio-details {
     background-color: #80808078;
-    color: white;
+    color: #2857a4;
 }
+
 
 
 
